--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT=3012
-PGUSER=super
-  PGHOST=192.168.1.150
-  PGPASSWORD=super123 
+PORT=5433
+PGUSER=postgres
+  PGHOST=localhost
+  PGPASSWORD=pramod1997
   PGDATABASE=sltl
-  PGPORT=5432 
+  PGPORT=5432
